# platform_external_giflib

./: .gitignore  AUTHORS  Android.bp  Android.mk  ChangeLog  DEVELOPERS  METADATA  Makefile  Makefile.am  Makefile.unx  NEWS  OWNERS  README  README.version  TODO  ThirdPartyProject.prop  api.txt  build.adoc  build.asc  build.txt  configure.ac  control  dgif_lib.c  egif_lib.c  getarg.c  getarg.h  gif2rgb.c  gif_font.c  gif_hash.c  gif_hash.h  gif_lib.h  gifalloc.c  gifbg.c  gifbuild.c  gifclrmp.c  gifcolor.c  gifecho.c  giffilter.c  giffix.c  gifhisto.c  (+10 more)
doc/: 00README  Makefile  Makefile.am  gif2rgb.xml  gif2x11.xml  gif87.txt  gif_lib.html  gif_lib.xml  gifasm.xml  gifbg.xml  gifbuild.xml  gifclip.xml  gifclrmp.xml  gifcolor.xml  gifcomb.xml  gifcompose.html  gifcompose.xml  giffiltr.xml  giffix.xml  gifflip.xml  gifhisto.xml  gifinfo.xml  gifinter.xml  gifinto.xml  giflib.xml  gifovly.xml  gifpos.xml  gifraw.xml  gifresize.xml  gifrotat.xml  gifrotate.xml  gifrsize.xml  gifspnge.xml  gifsponge.xml  giftext.xml  giftool.xml  gifwedge.xml  icon2gif.xml  index.html  index.html.in  (+6 more)
doc/gifstandard/: GIF89a.html
doc/whatsinagif/: bits_and_bytes.html  lzw_image_data.html
gba/: giftest.c  giftest.dsp  giftest.mak
lib/: Makefile.am  Makefile.ms  Makefile.unx  dev2gif.c  dgif_lib.c  egif_lib.c  getarg.c  getarg.h  gif_err.c  gif_font.c  gif_hash.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  openbsd-reallocarray.c  qprintf.c  quantize.c
pic/: Makefile.am
tests/: cmpdiffer  cover.dmp  cover.map  cover.rgb  coverage.asc  coverage.txt  fire.dmp  gifgrid.dmp  makefile  porsche.dmp  solid2.dmp  tapdiffer  treescap-interlaced.dmp  treescap.dmp  visual-check  welcome2.dmp  x-trans.dmp
util/: Makefile.am  Makefile.unx  getarg.c  getarg.h  gif2epsn.c  gif2iris.c  gif2ps.c  gif2raw.c  gif2rgb.c  gif2rle.c  gif2x11.c  gifasm.c  gifbg.c  gifbuild.c  gifclip.c  gifclrmp.c  gifcolor.c  gifcomb.c  gifcompose  gifecho.c  giffilter.c  giffiltr.c  giffix.c  gifflip.c  gifhisto.c  gifinfo.c  gifinter.c  gifinto.c  gifovly.c  gifpos.c  gifraw.c  gifresize.c  gifrotat.c  gifrotate.c  gifrsize.c  gifspnge.c  gifsponge.c  giftext.c  giftool.c  gifwedge.c  (+6 more)
windows/: gifshow.dsp  gifshow.dsw  libungif.dsp  resource.h
